--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#f0f2fd</color>
-    <color name="colorAccent">#ffa8de</color>
+    <color name="colorAccent">#ffa2c1</color>
 </resources>
